# HHG-Solids

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_swe.py
include/: berry_connection.h  constants.h  efield.h  fftw_helper.h  grid.h  hamiltonian.h  interpolation.h  matrix_field.h  observable.h  operator.h  rdm.h  settings.h  solver.h  solver_kspace.h  swe.h  vec3_util.h  velocity.h  wannier_tb.h
pySWE/: pyswe.py
scripts/: pol_scan.py  test_swe.py
src/: berry_connection.cpp  cwrapper.cpp  efield.cpp  fftw_helper.cpp  grid.cpp  hamiltonian.cpp  interpolation.cpp  main.cpp  matrix_field.cpp  observable.cpp  operator.cpp  rdm.cpp  settings.cpp  solver.cpp  solver_kspace.cpp  swe.cpp  vec3_util.cpp  velocity.cpp  wannier_tb.cpp
